# python_homework17

./: pyproject.toml  resource.py
tests/: test_delete.py  test_get.py  test_post.py  test_put.py
